--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ dotenv = "0.15.0"
 futures = "0.3.31"
 lazy_static = "1.5.0"
 log = "0.4.27"
+openai = "1.1.0"
 poise = "0.6.1"
 reqwest = "0.12.15"
+serde = "1.0.219"
+serde_json = "1.0.140"
 serenity = { version = "0.12.4", features = ["builder", "collector", "client", "framework", "framework", "http", "model", "utils", "voice", "chrono","cache"] }
 songbird = "0.5.0"
 tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
