--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "discord_hub_bot"
+name = "cc-bot"
 version = "0.1.0"
 edition = "2024"
 
@@ -20,6 +20,6 @@ tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["local-time", "fmt"] }
 
-[dependencies.symphonia]
-version = "0.5"
-features = ["all-codecs", "all-formats"] # ...as well as any extras you need!
+#[dependencies.symphonia]
+#version = "0.5"
+#features = ["all-codecs", "all-formats"] # ...as well as any extras you need!
