--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           name: CCBot
           path: |
-            ./target/release/CCBot*
-            !./target/release/CCBot.pdb
-            !./target/release/CCBot.d
+            ./target/release/cc-bot*
+            !./target/release/cc-bot.pdb
+            !./target/release/cc-bot.d
           retention-days: 30
