feat:在配置文件中指定ai系统提示

--- a/data.json.example
+++ b/data.json.example
@@ -15,6 +15,7 @@
          "n": 1,
          "response_format": {
            "type": "text"
-         }
+         },
+         "system_prompt_file":""
        }
 }
