feat:为songbird添加自定义网站搜索

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 poise = "0.6.1"
 serenity = { version = "0.12.4", features = ["builder", "collector", "client", "framework", "http", "model", "utils", "voice", "chrono", "cache"] }
-songbird = "0.5.0"
+#songbird = "0.5.0"
+songbird = { git = "https://github.com/ChengCY-2254/songbird" }
 sqlx = { version = "0.8.6",features = ["runtime-tokio-rustls","sqlite","macros"] }
 sea-orm = "1.1.11"
 tracing = "0.1.41"
