fix:补全提示，设定默认配置

--- a/data.json.example
+++ b/data.json.example
@@ -16,6 +16,6 @@
          "response_format": {
            "type": "text"
          },
-         "system_prompt_file":""
+         "system_prompt_file":"src/奶盖波波糖.md"
        }
 }
