--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ poise = "0.6.1"
 serenity = { version = "0.12.4", features = ["builder", "collector", "client", "framework", "http", "model", "utils", "voice", "chrono", "cache"] }
 #songbird = "0.5.0"
 # 音频播放框架
-songbird = { git = "https://github.com/ChengCY-2254/songbird" }
+songbird = { git = "https://github.com/ChengCY-2254/songbird",features = ["gateway","rustls","native"] }
 
 # macro使用
 lazy_static = "1.5.0"
