--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,5 @@ services:
       context: .
     volumes:
       - './config:/app/config'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
