parent 0980046f81315799c9ddea813ffc7efc6e730405 author Cheng <cheng@hutao.run> 1749520245 +0800 committer Cheng <cheng@hutao.run> 1750738765 +0800
# This is a combination of 5 commits.
# This is the 1st commit message:

fix(manage): 修复角色名检查逻辑

# This is the commit message #2:

fix(manage): 使用自定义容器镜像

为运行容器使用腾讯云源

为运行容器使用腾讯云源

切换为yt-dlp镜像

尝试直接下载最新的yt-dlp

添加yt-dlp

为运行容器添加python依赖

# This is the commit message #3:

精简编译后的大小。

# This is the commit message #4:

refactor(bot): 清除ai私聊功能，该功能不实用。

# This is the commit message #5:

fix(manage): 修复prompt删除逻辑

切换为yt-dlp镜像

尝试直接下载最新的yt-dlp

添加yt-dlp

为运行容器添加python依赖

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,14 @@ features = ["all"]
 
 [features]
 yt-dlp = []
+
+[profile.release]
+# https://github.com/microsoft/edit/blob/main/Cargo.toml#L22-L30
+codegen-units = 1
+debug = "full"
+lto = true
+opt-level = "s"
+panic = "abort"
+split-debuginfo = "packed"
+strip = "symbols"
+incremental = true
